# jubensha-ai

./: .env.example  .gitignore  AGENTS.md  API_USAGE_EXAMPLES.md  Epicrealismxl_Hades.json  LICENSE  README.md  README_EN.md  comfyui_demo.py  main.py  mypy.ini  openapi_raw.json  package-lock.json  pyproject.toml  readme.md  requirements.txt  server.py  test_voice_mapping.py  websocket_server.py
backend/: PRD.MD  README.md  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_character_parsing.py  test_connection_pool.py  test_di.py  test_json_parse.py  workflow_api.json
backend/.github/prompts/: python.prompt.md
backend/.lingma/rules/: python.md
backend/.trae/rules/: project_rules.md
backend/docs/: DEPENDENCY_INJECTION_MIGRATION.md
backend/scripts/: seed.py
backend/src/agents/: __init__.py  ai_agent.py  character_agent.py  character_agent_manager.py  character_identity.py  character_memory.py  gm_agent.py  phase_director.py
backend/src/core/: README_DEPENDENCY_INJECTION.md  __init__.py  auth_middleware.py  config.py  container_integration.py  conversation_flow_controller.py  database.py  dependency_container.py  evidence_manager.py  game_engine.py  game_tts_manager.py  middleware_dependencies.py  server.py  storage.py  voting_manager.py  websocket_server.py
backend/src/db/: __init__.py  session.py
backend/src/schemas/: __init__.py  evidence_type.py  file_schemas.py  (+6 more)
backend/static/: placeholder.txt
backend/tests/: conftest.py  factories.py  test_api_routes.py  test_services.py  test_user_api.py  test_utils_api.py
(+348 files in other folders)
